[project]
name = "transferpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography==42.0.7",
    "flask==3.0.3",
    "flask-jwt-extended==4.6.0",
    "flask-restful==0.3.9",
    "flask-sqlalchemy==3.1.1",
    "psycopg2-binary==2.9.9",
    "python-dotenv==0.21.0",
    "simplejson==3.17.6",
    "sqlalchemy==2.0.30",
]

[dependency-groups]
dev = [
    "pytest==6.2.5",
    "pytest-cov==2.11.1",
    "ruff>=0.14.6",
]
